Salesforce/main/default/main/default/objects/Opportunity/fields/Notificado__c.field-meta.xml
<CustomField>
    <fullName>Notificado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si se notificó al sector comercial lo informado en la Oportunidad</description>
    <label>Notificado</label>
    <type>Checkbox</type>
</CustomField>