Salesforce/main/default/main/default/objects/Opportunity/fields/Novo_quinto_vencimento__c.field-meta.xml
<CustomField>
    <fullName>Novo_quinto_vencimento__c</fullName>
    <label>5º Vencimento pedido</label>
    <type>Date</type>
</CustomField>