Salesforce/main/default/main/default/objects/Opportunity/fields/Novo_segundo_vencimento__c.field-meta.xml
<CustomField>
    <fullName>Novo_segundo_vencimento__c</fullName>
    <label>2º Vencimento pedido</label>
    <type>Date</type>
</CustomField>