Salesforce/main/default/main/default/objects/Opportunity/fields/Nro_Autom_NV__c.field-meta.xml
<CustomField>
    <fullName>Nro_Autom_NV__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Nro_Autom_NV</label>
    <type>AutoNumber</type>
</CustomField>