Salesforce/main/default/main/default/objects/Opportunity/fields/Nro_Nota_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Nro_Nota_Fiscal__c</fullName>
    <label>Nº da Nota Fiscal</label>
    <length>40</length>
    <type>Text</type>
</CustomField>