Salesforce/main/default/main/default/objects/Opportunity/fields/Numero_del__c.field-meta.xml
<CustomField>
    <fullName>Numero_del__c</fullName>
    <label>Numero</label>
    <length>10</length>
    <type>Text</type>
</CustomField>