Salesforce/main/default/main/default/objects/Opportunity/fields/Objetivo__c.field-meta.xml
<CustomField>
    <fullName>Objetivo__c</fullName>
    <label>Objetivo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Multiplicação</fullName>
            </value>
            <value>
                <fullName>Agricultor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>