Salesforce/main/default/main/default/objects/Opportunity/fields/Oferta_Asignada__c.field-meta.xml
<CustomField>
    <fullName>Oferta_Asignada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oferta Asignada</label>
    <type>Checkbox</type>
</CustomField>