Salesforce/main/default/main/default/objects/Opportunity/fields/Origen__c.field-meta.xml
<CustomField>
    <fullName>Origen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Es el Centro logístico desde el cual se despachan los productos</description>
    <label>Origem</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>O valor não existe ou não coincidem os critérios de filtro.</errorMessage>
        <filterItems>
            <field>Centro_Logistico__c.Licencias__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Centro_Logistico__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>