Salesforce/main/default/main/default/objects/Opportunity/fields/Pagador__c.field-meta.xml
<CustomField>
    <fullName>Pagador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pagador</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades (Pagador)</relationshipLabel>
    <relationshipName>Oportunidades1</relationshipName>
    <type>Lookup</type>
</CustomField>