Salesforce/main/default/main/default/objects/Opportunity/fields/Pedido_Relacionado__c.field-meta.xml
<CustomField>
    <fullName>Pedido_Relacionado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido Relacionado</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Oportunidades (Pedido Relacionado)</relationshipLabel>
    <relationshipName>Oportunidades1</relationshipName>
    <type>Lookup</type>
</CustomField>