Salesforce/main/default/main/default/objects/Opportunity/fields/Plano_de_Auditoria__c.field-meta.xml
<CustomField>
    <fullName>Plano_de_Auditoria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plano de Auditoria</label>
    <referenceTo>Plano_de_Auditoria__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Anexos</relationshipName>
    <type>Lookup</type>
</CustomField>