Salesforce/main/default/main/default/objects/Opportunity/fields/Porc_Pagado__c.field-meta.xml
<CustomField>
    <fullName>Porc_Pagado__c</fullName>
    <formula>IF(IF( Total_en_Reales__c &gt; 0, Cobrado_Pagamentos_R__c /  Total_en_Reales__c,0)&gt;1,1,IF( Total_en_Reales__c &gt; 0, Cobrado_Pagamentos_R__c /  Total_en_Reales__c,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Porc. Pagado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>