Salesforce/main/default/main/default/objects/Opportunity/fields/Prazo_Medio_Dif__c.field-meta.xml
<CustomField>
    <fullName>Prazo_Medio_Dif__c</fullName>
    <formula>(Prazo_Medio_Pedido__c - Prazo_Medio_Campanha__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prazo Medio Dif</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>