Salesforce/main/default/main/default/objects/Opportunity/fields/Prazo_Medio_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Prazo_Medio_Pedido__c</fullName>
    <formula>Dias_de_primeira_prorroga_o_pedido__c * Taxa_de_primeiro_pagamento__c + 
Dias_de_segunda_prorroga_o_pedido__c * Taxa_de_segundo_pagamento__c + 
Dias_de_terceira_prorroga_o_pedido__c * Taxa_de_terceiro_pagamento__c + 
Dias_de_quarta_prorroga_o_pedido__c * Taxa_de_quarto_pagamento__c + 
Dias_de_quinta_prorroga_o_pedido__c * Taxa_de_quinto_pagamento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prazo Medio Pedido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>