Salesforce/main/default/main/default/objects/Opportunity/fields/Prazos_aprobados__c.field-meta.xml
<CustomField>
    <fullName>Prazos_aprobados__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prazos aprobados</label>
    <type>Checkbox</type>
</CustomField>