Salesforce/main/default/main/default/objects/Opportunity/fields/Preco_Total_Sugerido_Sem_Juros__c.field-meta.xml
<CustomField>
    <fullName>Preco_Total_Sugerido_Sem_Juros__c</fullName>
    <label>Preço Total Sugerido Sem Juros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>