Salesforce/main/default/main/default/objects/Opportunity/fields/Previsao_Referencia__c.field-meta.xml
<CustomField>
    <fullName>Previsao_Referencia__c</fullName>
    <label>Previsao_Referencia</label>
    <length>50</length>
    <type>Text</type>
</CustomField>