Salesforce/main/default/main/default/objects/Opportunity/fields/Primeiro_vencimento__c.field-meta.xml
<CustomField>
    <fullName>Primeiro_vencimento__c</fullName>
    <formula>Campaign.Primeiro_vencimento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1º Vencimento campanha</label>
    <type>Date</type>
</CustomField>