Salesforce/main/default/main/default/objects/Opportunity/fields/Quantidade_Total__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_Total__c</fullName>
    <label>Quantidade Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>