Salesforce/main/default/main/default/objects/Opportunity/fields/Quantidade_total_do_produto__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_total_do_produto__c</fullName>
    <label>Quantidade total do produto</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>