Salesforce/main/default/main/default/objects/Opportunity/fields/Quinto_vencimento__c.field-meta.xml
<CustomField>
    <fullName>Quinto_vencimento__c</fullName>
    <formula>Campaign.Quinto_vencimento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>5º Vencimento campanha</label>
    <type>Date</type>
</CustomField>