Salesforce/main/default/main/default/objects/Opportunity/fields/Rebaja__c.field-meta.xml
<CustomField>
    <fullName>Rebaja__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica que se está una rebaja en la semilla obtenida por Producción.</description>
    <label>Rebaja</label>
    <type>Checkbox</type>
</CustomField>