Salesforce/main/default/main/default/objects/Opportunity/fields/Renasem_Produtor__c.field-meta.xml
<CustomField>
    <fullName>Renasem_Produtor__c</fullName>
    <label>Renasem Produtor</label>
    <length>30</length>
    <type>Text</type>
</CustomField>