Salesforce/main/default/main/default/objects/Opportunity/fields/Respons_vel__c.field-meta.xml
<CustomField>
    <fullName>Respons_vel__c</fullName>
    <label>Responsável</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pablo R de Souza</fullName>
            </value>
            <value>
                <fullName>Marcelo Steffen</fullName>
            </value>
            <value>
                <fullName>Edison Carneiro</fullName>
            </value>
            <value>
                <fullName>Fernando Frehner</fullName>
            </value>
            <value>
                <fullName>Thiago Schwonka</fullName>
            </value>
            <value>
                <fullName>Lucas Pires</fullName>
            </value>
            <value>
                <fullName>Fernando Gaspar</fullName>
            </value>
            <value>
                <fullName>Sergio Bertagnolli</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>