Salesforce/main/default/main/default/objects/Opportunity/fields/Responsable__c.field-meta.xml
<CustomField>
    <fullName>Responsable__c</fullName>
    <label>Responsável</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Marca__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>105 - Rogério A. Schneider</fullName>
            </value>
            <value>
                <fullName>096 - Charles C. Pintro</fullName>
            </value>
            <value>
                <fullName>106 - Sandro Ferrari M.</fullName>
            </value>
            <value>
                <fullName>066 - Marcelo Steffen</fullName>
            </value>
            <value>
                <fullName>067 - Sérgio Bertagnoli</fullName>
            </value>
            <value>
                <fullName>083 - Jorge Cristiano Rosa</fullName>
            </value>
            <value>
                <fullName>061 - Fernando Frenher</fullName>
            </value>
            <value>
                <fullName>077 - Antonio Paiva</fullName>
            </value>
            <value>
                <fullName>076 - Tiago Goulart</fullName>
            </value>
            <value>
                <fullName>111 - Pablo R de Souza</fullName>
            </value>
            <value>
                <fullName>095 - Brasmax</fullName>
            </value>
            <value>
                <fullName>101 - Fausto Fanchim</fullName>
            </value>
            <value>
                <fullName>104 - Otavio Gorni</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>