Salesforce/main/default/main/default/objects/Opportunity/fields/Sacas_Comer__c.field-meta.xml
<CustomField>
    <fullName>Sacas_Comer__c</fullName>
    <label>Sacas Comercializadas</label>
    <summarizedField>OpportunityLineItem.Semente_comercializada__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>