Salesforce/main/default/main/default/objects/Opportunity/fields/Sacas_Vendidas__c.field-meta.xml
<CustomField>
    <fullName>Sacas_Vendidas__c</fullName>
    <description>Cantidad de bolsas vendidas (comerc + propio)</description>
    <formula>Sacas_Comer__c +  Sacas_uso_pr_prio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sacas Vendidas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>