Salesforce/main/default/main/default/objects/Opportunity/fields/Safra__c.field-meta.xml
<CustomField>
    <fullName>Safra__c</fullName>
    <description>Safra o Campania agricola</description>
    <label>Safra</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>06/07</fullName>
            </value>
            <value>
                <fullName>07/08</fullName>
            </value>
            <value>
                <fullName>08/09</fullName>
            </value>
            <value>
                <fullName>09/10</fullName>
            </value>
            <value>
                <fullName>09/09</fullName>
            </value>
            <value>
                <fullName>10/10</fullName>
            </value>
            <value>
                <fullName>10/11</fullName>
            </value>
            <value>
                <fullName>11/11</fullName>
            </value>
            <value>
                <fullName>11/12</fullName>
            </value>
            <value>
                <fullName>12/12</fullName>
            </value>
            <value>
                <fullName>12/13</fullName>
            </value>
            <value>
                <fullName>13/14</fullName>
            </value>
            <value>
                <fullName>14/15</fullName>
            </value>
            <value>
                <fullName>15/16</fullName>
            </value>
            <value>
                <fullName>16/17</fullName>
            </value>
            <value>
                <fullName>17/18</fullName>
            </value>
            <value>
                <fullName>18/19</fullName>
            </value>
            <value>
                <fullName>19/20</fullName>
            </value>
            <value>
                <fullName>20/21</fullName>
            </value>
            <value>
                <fullName>21/22</fullName>
                <default>true</default>
                <label>21/22</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>