Salesforce/main/default/main/default/objects/Opportunity/fields/Saldo_Habilitado__c.field-meta.xml
<CustomField>
    <fullName>Saldo_Habilitado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saldo Habilitado</label>
    <type>Checkbox</type>
</CustomField>