Salesforce/main/default/main/default/objects/Opportunity/fields/Sap_EP_FB08_Anulacion__c.field-meta.xml
<CustomField>
    <fullName>Sap_EP_FB08_Anulacion__c</fullName>
    <description>Texto que identifica al documento que anula la factura. Es el EP FB08 de SAP.</description>
    <inlineHelpText>Texto que identifica al documento que anula la factura. Es el EP FB08 de SAP.</inlineHelpText>
    <label>Sap EP FB08 Anulacion</label>
    <length>20</length>
    <type>Text</type>
</CustomField>