Salesforce/main/default/main/default/objects/Opportunity/fields/Sap_J1b1_N_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Sap_J1b1_N_Fiscal__c</fullName>
    <description>Valor devuelto por la interfaz al generar el asiento y la nota fiscal en FI. J1B3 para ver en SAP</description>
    <label>Sap J1b1 N Fiscal</label>
    <length>10</length>
    <type>Text</type>
</CustomField>