Salesforce/main/default/main/default/objects/Opportunity/fields/Segundo_vencimento__c.field-meta.xml
<CustomField>
    <fullName>Segundo_vencimento__c</fullName>
    <formula>Campaign.Segundo_vencimento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2º Vencimento campanha</label>
    <type>Date</type>
</CustomField>