Salesforce/main/default/main/default/objects/Opportunity/fields/Setor__c.field-meta.xml
<CustomField>
    <fullName>Setor__c</fullName>
    <description>En este campo se indica que sector está cargando la oportunidad de Producción de Básica</description>
    <label>Setor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Desarrollo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>