Salesforce/main/default/main/default/objects/Opportunity/fields/Sociedad__c.field-meta.xml
<CustomField>
    <fullName>Sociedad__c</fullName>
    <label>Sociedad</label>
    <length>4</length>
    <type>Text</type>
</CustomField>