Salesforce/main/default/main/default/objects/Opportunity/fields/Sociedad_SF__c.field-meta.xml
<CustomField>
    <fullName>Sociedad_SF__c</fullName>
    <formula>IF(Licencias__c, &quot;MBAS&quot;, &quot;BRMX&quot;)</formula>
    <label>Sociedad_SF</label>
    <type>Text</type>
</CustomField>