Salesforce/main/default/main/default/objects/Opportunity/fields/Solicitacao_de_reembolso__c.field-meta.xml
<CustomField>
    <fullName>Solicitacao_de_reembolso__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si la oportunidad tiene un pedido de devolucion el checkbox se activa</description>
    <label>Solicitação de reembolso</label>
    <type>Checkbox</type>
</CustomField>