Salesforce/main/default/main/default/objects/Opportunity/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <formula>IF(ISPICKVAL(Marca__c, &apos;BRMX&apos;),  RIGHT(TEXT(Account.Responsavel__c), LEN(TEXT(Account.Responsavel__c)) - 6), 
IF(ISPICKVAL(Marca__c, &apos;DSEM&apos;),  RIGHT(TEXT(Account.Reponsavel_DSEM__c), LEN(TEXT(Account.Reponsavel_DSEM__c)) - 6),
RIGHT(TEXT(Account.Responsavel_NEOGEN__c), LEN(TEXT(Account.Responsavel_NEOGEN__c)) - 6)))</formula>
    <label>Supervisor</label>
    <type>Text</type>
</CustomField>