Salesforce/main/default/main/default/objects/Opportunity/fields/Taxa_de_quarto_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Taxa_de_quarto_pagamento__c</fullName>
    <label>% Pedido 4º parcela</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>