Salesforce/main/default/main/default/objects/Opportunity/fields/Terceiro_vencimento__c.field-meta.xml
<CustomField>
    <fullName>Terceiro_vencimento__c</fullName>
    <formula>Campaign.Terceiro_vencimiento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>3º Vencimento campanha</label>
    <type>Date</type>
</CustomField>