Salesforce/main/default/main/default/objects/Opportunity/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ZB00 - BR Oferta</fullName>
            </value>
            <value>
                <fullName>ZCO - Oferta da Básica</fullName>
            </value>
            <value>
                <fullName>ZO00 - BR Cuenta y Orden</fullName>
            </value>
            <value>
                <fullName>ZO01 - BR Entrega Futura</fullName>
            </value>
            <value>
                <fullName>ZO02 - BR Venta Exportación</fullName>
            </value>
            <value>
                <fullName>ZO03 - BR Venta Futura</fullName>
            </value>
            <value>
                <fullName>ZO04 - BR Vta. s/entrega</fullName>
            </value>
            <value>
                <fullName>ZO05 - BR Vta. Almacenam.</fullName>
            </value>
            <value>
                <fullName>ZO07 - BR Entrega Muestra</fullName>
            </value>
            <value>
                <fullName>ZO08 - BR Regalías s/NF</fullName>
            </value>
            <value>
                <fullName>ZO09 - BR Regalías</fullName>
            </value>
            <value>
                <fullName>ZO10 - BR Material s/nombre</fullName>
            </value>
            <value>
                <fullName>ZO11 - BR Fidelización</fullName>
            </value>
            <value>
                <fullName>ZO12 - BR Venta Normal</fullName>
            </value>
            <value>
                <fullName>ZO13 - Ped. Exterior</fullName>
            </value>
            <value>
                <fullName>ZO14 - Ped.Local - Fc ref/Entr</fullName>
            </value>
            <value>
                <fullName>ZO15 - Ped.Local - Fc ref/Ped</fullName>
            </value>
            <value>
                <fullName>ZC01 - Solicit. Nota de Cred.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>