Salesforce/main/default/main/default/objects/Opportunity/fields/TipoReg__c.field-meta.xml
<CustomField>
    <fullName>TipoReg__c</fullName>
    <formula>CASE($RecordType.Name, &quot;Comercial&quot;, &quot;Comercial&quot;, &quot;Produccion&quot;, &quot;Produccion&quot;,&quot;Pendiente&quot;,&quot;AU - Comercial&quot;,&quot;Autorizada&quot;,&quot;AU - SAP&quot;,&quot;Rebaja&quot;,&quot;Rebaja&quot;,$RecordType.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TipoReg</label>
    <type>Text</type>
</CustomField>