Salesforce/main/default/main/default/objects/Opportunity/fields/Total_do_primeiro_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Total_do_primeiro_pagamento__c</fullName>
    <label>Total do primeiro pagamento</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>