Salesforce/main/default/main/default/objects/Opportunity/fields/Total_en_Reais__c.field-meta.xml
<CustomField>
    <fullName>Total_en_Reais__c</fullName>
    <description>Calcula el total en Reales para VB</description>
    <label>Total en Reais</label>
    <summarizedField>OpportunityLineItem.Precio_Total_Aux__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>