Salesforce/main/default/main/default/objects/Opportunity/fields/Total_en_Reales__c.field-meta.xml
<CustomField>
    <fullName>Total_en_Reales__c</fullName>
    <formula>Amount *  ROUND(Tipo_de_cambio__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total en Reales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>