Salesforce/main/default/main/default/objects/Opportunity/fields/Total_Juros_Desconto__c.field-meta.xml
<CustomField>
    <fullName>Total_Juros_Desconto__c</fullName>
    <formula>Juros_Desconto__c * Preco_Total_Sugerido_Sem_Juros__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Juros/Desconto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>