Salesforce/main/default/main/default/objects/Opportunity/fields/Total_VL_Liquido__c.field-meta.xml
<CustomField>
    <fullName>Total_VL_Liquido__c</fullName>
    <label>Valor Total</label>
    <summarizedField>OpportunityLineItem.VL_Liquido_Copia__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>