Salesforce/main/default/main/default/objects/Opportunity/fields/VB_Cidade__c.field-meta.xml
<CustomField>
    <fullName>VB_Cidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cidade</label>
    <referenceTo>Cidade__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>