Salesforce/main/default/main/default/objects/Opportunity/fields/VB_Cot_Soja__c.field-meta.xml
<CustomField>
    <fullName>VB_Cot_Soja__c</fullName>
    <label>Cot. Soja</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADM</fullName>
            </value>
            <value>
                <fullName>ASUNCION</fullName>
            </value>
            <value>
                <fullName>COAMO</fullName>
            </value>
            <value>
                <fullName>COTRIJAL</fullName>
            </value>
            <value>
                <fullName>CHICAGO</fullName>
            </value>
            <value>
                <fullName>C. VALE</fullName>
            </value>
            <value>
                <fullName>SAFRAS &amp; MERCADO</fullName>
            </value>
            <value>
                <fullName>S&amp;M Campo Grande</fullName>
            </value>
            <value>
                <fullName>S&amp;M Rio Verde</fullName>
            </value>
            <value>
                <fullName>S&amp;M Sorriso</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Passo Fundo (RS)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Londrina (PR)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Rondonópolis (MT)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Barreiras (BA)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Uberlandia (MG)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Primavera (MT)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Rio Verde (GO)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Unaí (MG)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Diamantino (MT)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Pedro Afonso (TO)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>