Salesforce/main/default/main/default/objects/Opportunity/fields/VB_Observacion_Cto_Multiplicacion__c.field-meta.xml
<CustomField>
    <fullName>VB_Observacion_Cto_Multiplicacion__c</fullName>
    <description>Observaciones del seguimiento de cto multiplicacion por la venta de Basica</description>
    <label>Observacion Cto Multiplicacion</label>
    <type>TextArea</type>
</CustomField>