Salesforce/main/default/main/default/objects/Opportunity/fields/VB_Quem_negocia__c.field-meta.xml
<CustomField>
    <fullName>VB_Quem_negocia__c</fullName>
    <description>Quien negocia con el multiplicador la venta de basica que hace el Franqueado</description>
    <label>Quem negocia?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brasmax</fullName>
            </value>
            <value>
                <fullName>Butiá</fullName>
            </value>
            <value>
                <fullName>Mutuca</fullName>
            </value>
            <value>
                <fullName>Roos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>