Salesforce/main/default/main/default/objects/Opportunity/recordTypes/Anexo_I_Rebaixamento_Ha.recordType-meta.xml
<RecordType>
    <fullName>Anexo_I_Rebaixamento_Ha</fullName>
    <active>true</active>
    <businessProcess>Circuito de Anexos</businessProcess>
    <label>Anexo I Rebaixamento Ha</label>
</RecordType>