Salesforce/main/default/main/default/objects/Opportunity/recordTypes/Anexo_II_Rebaixamento_Sacas.recordType-meta.xml
<RecordType>
    <fullName>Anexo_II_Rebaixamento_Sacas</fullName>
    <active>true</active>
    <businessProcess>Docusign - Anexos</businessProcess>
    <description>Anexo II Rebaixamento Sacas</description>
    <label>Anexo II Rebaixamento Sacas</label>
</RecordType>