Salesforce/main/default/main/default/objects/Opportunity/recordTypes/Anexo_III.recordType-meta.xml
<RecordType>
    <fullName>Anexo_III</fullName>
    <active>true</active>
    <businessProcess>Circuito de Anexos</businessProcess>
    <label>Anexo III</label>
</RecordType>