Salesforce/main/default/main/default/objects/Opportunity/recordTypes/AnexoII.recordType-meta.xml
<RecordType>
    <fullName>AnexoII</fullName>
    <active>true</active>
    <businessProcess>Circuito de Anexos</businessProcess>
    <description>Anexo II - Relatório de produção de sementes</description>
    <label>Anexo II</label>
</RecordType>