Salesforce/main/default/main/default/objects/Opportunity/recordTypes/AnexoIII.recordType-meta.xml
<RecordType>
    <fullName>AnexoIII</fullName>
    <active>false</active>
    <businessProcess>Circuito de Anexos</businessProcess>
    <description>Anexo III - Relatório de produção de sementes</description>
    <label>AnexoIII - NO USAR</label>
</RecordType>