Salesforce/main/default/main/default/objects/Opportunity/recordTypes/AnexoIV.recordType-meta.xml
<RecordType>
    <fullName>AnexoIV</fullName>
    <active>false</active>
    <businessProcess>Circuito de Anexos</businessProcess>
    <description>Anexo IV - Atualização Comercial</description>
    <label>AnexoIV</label>
</RecordType>