Salesforce/main/default/main/default/objects/Opportunity/recordTypes/Anticipo_Autorizada.recordType-meta.xml
<RecordType>
    <fullName>Anticipo_Autorizada</fullName>
    <active>true</active>
    <businessProcess>Nota de Venta - Autorizada</businessProcess>
    <label>Antecipação Autorizada</label>
</RecordType>