Salesforce/main/default/main/default/objects/Opportunity/recordTypes/CVB_Autorizada.recordType-meta.xml
<RecordType>
    <fullName>CVB_Autorizada</fullName>
    <active>true</active>
    <businessProcess>Prevision Venta Basica</businessProcess>
    <description>Confirmación de Venta de Básica bajada a SAP</description>
    <label>CVB Autorizada</label>
</RecordType>