Salesforce/main/default/main/default/objects/Opportunity/recordTypes/CVB_Pendiente.recordType-meta.xml
<RecordType>
    <fullName>CVB_Pendiente</fullName>
    <active>true</active>
    <businessProcess>Prevision Venta Basica</businessProcess>
    <description>Es la confirmación de la venta de básica antes de ser enviada a SAP como NV.</description>
    <label>CVB Pendiente</label>
</RecordType>