Salesforce/main/default/main/default/objects/Opportunity/recordTypes/Disponibilidade_da_Basica.recordType-meta.xml
<RecordType>
    <fullName>Disponibilidade_da_Basica</fullName>
    <active>true</active>
    <businessProcess>Controle de Estoque</businessProcess>
    <description>Oportunidad para ingresar el stock de Básica por Safra, Marca y Macroregión.</description>
    <label>Disponibilidade da Basica</label>
</RecordType>