Salesforce/main/default/main/default/objects/Opportunity/recordTypes/Estimativa_de_faturamento.recordType-meta.xml
<RecordType>
    <fullName>Estimativa_de_faturamento</fullName>
    <active>true</active>
    <businessProcess>Objetivo Ventas</businessProcess>
    <label>Estimativa de faturamento</label>
</RecordType>