Salesforce/main/default/main/default/objects/Opportunity/recordTypes/Estimativa_de_venda.recordType-meta.xml
<RecordType>
    <fullName>Estimativa_de_venda</fullName>
    <active>true</active>
    <businessProcess>Objetivo Ventas</businessProcess>
    <label>Estimativa de venda</label>
</RecordType>