Salesforce/main/default/main/default/objects/Opportunity/recordTypes/Exportacion.recordType-meta.xml
<RecordType>
    <fullName>Exportacion</fullName>
    <active>true</active>
    <businessProcess>Circuito de Anexos</businessProcess>
    <label>Exportacion</label>
</RecordType>