Salesforce/main/default/main/default/objects/Opportunity/recordTypes/MBVentas.recordType-meta.xml
<RecordType>
    <fullName>MBVentas</fullName>
    <active>false</active>
    <businessProcess>Mais Basica</businessProcess>
    <label>MBVentas</label>
</RecordType>